--- a/project/src/voyages/res/layout/fragment_phone_launch.xml
+++ b/project/src/voyages/res/layout/fragment_phone_launch.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/vsc_home_page_background"
-    android:orientation="vertical">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@drawable/vsc_home_page_background"
+             android:orientation="vertical">
 
     <ImageView
         android:id="@+id/vsc_image"
@@ -12,21 +12,12 @@
         android:layout_gravity="center|top"
         android:layout_marginTop="80dp"
         android:background="@drawable/vsc_text_logo"
-        android:textColor="@android:color/white" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:alpha="0.7"
-        android:gravity="center"
-        android:text="@string/search"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -41,10 +32,9 @@
                 android:id="@+id/vsc_hotel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/vsc_hotel_button_selector"
                 android:gravity="center"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -53,8 +43,13 @@
                 android:gravity="bottom|center"
                 android:text="@string/nav_hotels"
                 android:textColor="@android:color/white"
-                android:textSize="20dp" />
+                android:textSize="20dp"/>
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/vsc_line_split"/>
 
         <LinearLayout
             android:id="@+id/vsc_flights_search_layout"
@@ -68,9 +63,8 @@
                 android:id="@+id/vsc_flight_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/vsc_flight_button_selector"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -78,7 +72,7 @@
                 android:gravity="bottom|center"
                 android:text="@string/nav_flights"
                 android:textColor="@android:color/white"
-                android:textSize="20dp" />
+                android:textSize="20dp"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
