--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="skin_hotelPriceSaleColor">@color/hotel_price_sale_text_color_vsc</item>
         <item name="skin_hotelSearchActionBarPadding">5dp</item>
         <item name="skin_webViewPreferencesActionBarLogo">@drawable/ic_logo_vsc</item>
+        <item name="skin_webViewPreferencesActionBarLogoWithTitle">@drawable/ic_logo_vsc</item>
         <item name="skin_actionBarCheckMarkDrawable">@drawable/ic_action_bar_checkmark_green</item>
         <item name="skin_actionBarButtonTextColor">@color/action_bar_text_green</item>
         <item name="skin_actionBarCheckoutDrawable">@drawable/ic_action_bar_checkout_arrow_green</item>
@@ -123,7 +124,7 @@
     </style>
 
     <style name="LaunchTheme" parent="@android:style/Theme.Holo">
-        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:logo">@drawable/ic_ab_vsc_logo</item>
         <item name="android:actionBarStyle">@style/LaunchActionBar</item>
         <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
         <item name="skin_flightLineColor">@color/flight_trip</item>
@@ -144,12 +145,35 @@
         <item name="skin_itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
         <item name="skin_itinDismissListSelectorDrawable">?android:attr/selectableItemBackground</item>
         <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal_vsc</item>
-        <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight</item>
-        <item name="skin_icTypeCircleHotel">@drawable/ic_type_circle_hotel</item>
+        <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight_vsc</item>
+        <item name="skin_icTypeCircleHotel">@drawable/ic_type_circle_hotel_vsc</item>
         <item name="skin_addToCalenderMessage">@string/contact_phone_template</item>
         <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE</item>
         <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE</item>
         <item name="skin_itineraryNumberString">@string/vsc_itinerary</item>
     </style>
 
+    <style name="LaunchActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:displayOptions">showHome|useLogo</item>
+        <item name="android:background">@drawable/bg_launch_ab_vsc</item>
+    </style>
+
+    <style name="LaunchActionBarTabStyle" parent="@android:style/Widget.Holo.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_launch_vsc</item>
+    </style>
+
+    <style name="Theme.Phone.WebView">
+        <item name="android:logo">@drawable/ic_logo_vsc</item>
+    </style>
+
+    <style name="Theme.Phone.Preferences">
+        <item name="android:logo">@drawable/ic_logo_vsc</item>
+    </style>
+
+    <style name="ItineraryTheme" parent="Theme.VSC">
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_vsc</item>
+        <item name="skin_itinHotelPlaceholderDrawable">@drawable/placeholder_lg_vsc</item>
+        <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight_vsc</item>
+        <item name="skin_icTypeCircleHotel">@drawable/ic_type_circle_hotel_vsc</item>
+    </style>
 </resources>
