--- a/project/src/main/res/layout/fragment_slide_to_purchase.xml
+++ b/project/src/main/res/layout/fragment_slide_to_purchase.xml
@@ -19,6 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
             android:text="@string/Do_you_accept"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:textColor="@color/slide_to_purchase_text" />
 
         <!-- We build this whole oval manually instead of as a simple 9patch for l337 animation effects -->
