--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -41,7 +41,7 @@
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/ic_log_in_vsc</item>
         <item name="skin_hotelCheckoutLoginButtonText">@string/hotel_checkout_logIn_button_text</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_vsc</item>
-        <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_vsc_white_logo_small</item>
+        <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_vsc_traveler_logo_disabled</item>
         <item name="skin_hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale_vsc</item>
         <item name="skin_hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder_vsc</item>
         <item name="skin_hotelWebViewActionBarLogo">@drawable/ic_logo_hotels</item>
@@ -86,6 +86,8 @@
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_vsc</item>
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights</item>
         <item name="skin_flightsCostSummaryDialogStripeDrawable">@drawable/rainbow_bar</item>
+        <item name="skin_travellerInfoPageLogo">@drawable/ic_vsc_traveler_logo</item>
+        <item name="skin_travellerInfoPageLogoDisabled">@drawable/ic_vsc_traveler_logo_disabled</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
@@ -177,5 +179,11 @@
         <item name="skin_itinHotelPlaceholderDrawable">@drawable/placeholder_lg_vsc</item>
         <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight_vsc</item>
         <item name="skin_icTypeCircleHotel">@drawable/ic_type_circle_hotel_vsc</item>
+    </style>
+
+    <style name="LoginTheme" parent="Theme.Phone.Dark">
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_vsc</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 </resources>
