--- a/project/src/voyages/res/layout/fragment_phone_launch.xml
+++ b/project/src/voyages/res/layout/fragment_phone_launch.xml
@@ -2,8 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@drawable/vsc_home_page_background"
              android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/vsc_home_bg_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="false"
+        android:background="@drawable/vsc_home_page_background"
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:id="@+id/vsc_image"
@@ -16,63 +23,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
+        android:paddingBottom="20dp">
 
-        <LinearLayout
-            android:id="@+id/vsc_hotels_search_layout"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+        <TextView
+            android:id="@+id/vsc_hotel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/vsc_hotel_button_selector"
             android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/vsc_hotel_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/vsc_hotel_button_selector"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center"
-                android:gravity="bottom|center"
-                android:text="@string/nav_hotels"
-                android:textColor="@android:color/white"
-                android:textSize="20dp"/>
-        </LinearLayout>
+            android:paddingRight="60dp"
+            android:drawablePadding="15dp"
+            android:textColor="@android:color/white"
+            android:text="@string/nav_hotels"
+            android:textSize="15dp"
+            android:contentDescription="@string/cd_launch_hotels" />
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/vsc_line_split"/>
 
-        <LinearLayout
-            android:id="@+id/vsc_flights_search_layout"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+        <TextView
+            android:id="@+id/vsc_flight_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/vsc_flight_button_selector"
             android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/vsc_flight_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/vsc_flight_button_selector"
-                android:textColor="@android:color/white"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="bottom|center"
-                android:text="@string/nav_flights"
-                android:textColor="@android:color/white"
-                android:textSize="20dp"/>
-        </LinearLayout>
+            android:paddingLeft="55dp"
+            android:drawablePadding="15dp"
+            android:textColor="@android:color/white"
+            android:text="@string/nav_flights"
+            android:textSize="15dp"
+            android:contentDescription="@string/cd_launch_flights" />
     </LinearLayout>
 </FrameLayout>
