--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -128,7 +128,7 @@
     </style>
 
     <style name="LaunchTheme" parent="@android:style/Theme.Holo">
-        <item name="android:logo">@drawable/ic_ab_vsc_logo</item>
+        <item name="android:logo">@drawable/launch_actionbar_space_between_icon_and_tabs</item>
         <item name="android:actionBarStyle">@style/LaunchActionBar</item>
         <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
         <item name="skin_flightLineColor">@color/flight_trip</item>
