--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -2,22 +2,22 @@
 <com.expedia.bookings.widget.CarSearchParamsWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#F7F7F7"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F7F7F7">
 
     <RelativeLayout
         android:id="@+id/search_container"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp">
 
         <LinearLayout
             android:id="@+id/search_header"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:orientation="horizontal">
 
             <ImageButton
@@ -25,9 +25,9 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:scaleType="centerInside"
-                android:padding="5dp"
                 android:background="@drawable/fab_button"
+                android:padding="5dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_close_white_48dp"
                 android:tint="@color/cars_actionbar_text_color" />
 
@@ -35,23 +35,23 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
                 android:layout_weight="1"
                 android:padding="5dp"
-                android:layout_gravity="left|center_vertical"
                 android:text="@string/dates_and_location"
-                android:textSize="18sp"
                 android:textColor="@color/cars_actionbar_text_color"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/search_btn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:padding="5dp"
                 android:layout_gravity="center"
                 android:background="@drawable/fab_button"
-                android:src="@drawable/ic_done_white_48dp"
+                android:padding="5dp"
                 android:scaleType="centerInside"
+                android:src="@drawable/ic_done_white_48dp"
                 android:tint="@color/cars_actionbar_text_color" />
         </LinearLayout>
 
@@ -59,212 +59,217 @@
             android:id="@+id/location_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/search_header"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:layout_below="@id/search_header"
             android:orientation="horizontal">
 
             <AutoCompleteTextView
                 android:id="@+id/pickup_location"
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
+                android:layout_height="43dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="4dp"
-                android:layout_height="43dp"
                 android:layout_weight="1"
                 android:completionThreshold="1"
-                android:imeOptions="actionDone"
                 android:dropDownAnchor="@+id/location_container"
-                android:hint="@string/pick_up_location" />
+                android:hint="@string/pick_up_location"
+                android:imeOptions="actionDone" />
 
             <TextView
                 android:id="@+id/dropoff_location"
                 style="@style/CarAutocomplete"
                 android:layout_width="0dp"
                 android:layout_height="43dp"
-                android:layout_weight="1"
-                android:layout_marginRight="8dp"
                 android:layout_marginLeft="4dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:hint="@string/same_as_pick_up"
-                android:textColorHint="@color/cars_dropdown_disabled_stroke"
-                android:textColor="@color/cars_dropdown_disabled_stroke" />
+                android:textColor="@color/cars_dropdown_disabled_stroke"
+                android:textColorHint="@color/cars_dropdown_disabled_stroke" />
         </LinearLayout>
 
         <ToggleButton
             android:id="@+id/select_date"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_below="@id/location_container"
-            android:drawablePadding="12dp"
-            android:textSize="14sp"
-            android:paddingLeft="13dp"
-            android:gravity="left|center_vertical"
-            android:paddingRight="5dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:background="@drawable/cars_button_background_selector"
             android:drawableLeft="@drawable/cars_button_circle"
+            android:drawablePadding="12dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="13dp"
+            android:paddingRight="5dp"
             android:textColor="@drawable/cars_text_selector"
             android:textOff="@string/select_pickup_and_dropoff_dates"
-            android:textOn="@string/select_pickup_and_dropoff_dates" />
+            android:textOn="@string/select_pickup_and_dropoff_dates"
+            android:textSize="14sp" />
     </RelativeLayout>
-
-    <View
-        android:id="@+id/calendar_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:background="@drawable/drop_shadow"
-        android:layout_above="@+id/calendar" />
-
-    <com.mobiata.android.time.widget.CalendarPicker
-        android:id="@+id/calendar"
-        app:calendarBaseColor="@color/cars_valid_days_calendar"
-        app:calendarSecondaryColor="@color/cars_valid_days_calendar"
-        app:calendarHighlightColor="@color/cars_secondary_color"
-        app:calendarHighlightInverseColor="@color/cars_secondary_color"
-        app:calendarTodayColor="@color/cars_valid_days_calendar"
-        app:calendarDaySelectionFillColor="@android:color/white"
-        app:calendarWeekSelectionColor="@color/cars_primary_color"
-        app:calendarHeaderTextColor="@color/cars_primary_color"
-        app:calendarLayout="@layout/cars_calendar"
-        app:calendarHeaderTextSize="16dp"
-        app:calendarInvalidDaysColor="@color/cars_invalid_days_calendar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:layout_below="@+id/search_container"
-        android:layout_above="@+id/slider_container"
-        android:paddingBottom="8dp" />
-
-    <View
-        android:id="@+id/slider_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:background="@drawable/drop_shadow"
-        android:layout_above="@+id/slider_container" />
 
     <RelativeLayout
-        android:id="@+id/slider_container"
+        android:id="@+id/calendar_container"
         android:layout_width="match_parent"
-        android:background="@color/cars_primary_color"
         android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:layout_alignParentBottom="true">
+        android:layout_gravity="bottom">
 
-        <TextView
-            android:paddingLeft="16dp"
-            android:paddingRight="4dp"
-            android:id="@+id/pickup_time_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/pickup_time_seek_bar"
-            android:layout_alignBottom="@+id/pickup_time_seek_bar"
-            android:layout_toLeftOf="@+id/pickup_time_seek_bar"
-            android:textColor="#FFFFFF"
-            android:gravity="center_vertical"
-            android:text="@string/pick_up_time_label"
-            android:textSize="12sp" />
-
-        <com.expedia.bookings.widget.CarsTimeSlider
-            android:id="@+id/pickup_time_seek_bar"
+        <View
+            android:id="@+id/calendar_shadow"
             android:layout_width="match_parent"
-            android:progressDrawable="@drawable/cars_slider_progress"
-            android:layout_alignLeft="@+id/dropoff_time_seek_bar"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="4dp"
-            android:layout_height="wrap_content"
-            android:maxHeight="6dp"
-            android:max="47" />
+            android:layout_height="8dp"
+            android:layout_above="@+id/calendar"
+            android:background="@drawable/drop_shadow" />
 
-        <TextView
-            android:id="@+id/dropoff_time_title"
-            android:layout_alignParentLeft="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/dropoff_time_seek_bar"
-            android:layout_alignBottom="@+id/dropoff_time_seek_bar"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="4dp"
-            android:text="@string/drop_off_time_label"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
+        <com.mobiata.android.time.widget.CalendarPicker
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_above="@+id/slider_container"
+            android:background="@android:color/white"
+            android:paddingBottom="8dp"
+            app:calendarBaseColor="@color/cars_valid_days_calendar"
+            app:calendarDaySelectionFillColor="@android:color/white"
+            app:calendarHeaderTextColor="@color/cars_primary_color"
+            app:calendarHeaderTextSize="16dp"
+            app:calendarHighlightColor="@color/cars_secondary_color"
+            app:calendarHighlightInverseColor="@color/cars_secondary_color"
+            app:calendarInvalidDaysColor="@color/cars_invalid_days_calendar"
+            app:calendarLayout="@layout/cars_calendar"
+            app:calendarSecondaryColor="@color/cars_valid_days_calendar"
+            app:calendarTodayColor="@color/cars_valid_days_calendar"
+            app:calendarWeekSelectionColor="@color/cars_primary_color" />
 
-        <com.expedia.bookings.widget.CarsTimeSlider
-            android:id="@+id/dropoff_time_seek_bar"
+        <View
+            android:id="@+id/slider_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_above="@+id/slider_container"
+            android:background="@drawable/drop_shadow" />
+
+        <RelativeLayout
+            android:id="@+id/slider_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/dropoff_time_title"
-            android:layout_below="@+id/pickup_time_seek_bar"
-            android:maxHeight="6dp"
-            android:layout_marginTop="4dp"
-            android:progressDrawable="@drawable/cars_slider_progress"
-            android:max="47" />
+            android:layout_alignParentBottom="true"
+            android:background="@color/cars_primary_color"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/pickup_time_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/pickup_time_seek_bar"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@+id/pickup_time_seek_bar"
+                android:layout_toLeftOf="@+id/pickup_time_seek_bar"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="4dp"
+                android:text="@string/pick_up_time_label"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
 
-    <com.expedia.bookings.widget.LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone"
-        android:id="@+id/pickup_time_popup_container"
-        android:padding="1dp">
+            <com.expedia.bookings.widget.CarsTimeSlider
+                android:id="@+id/pickup_time_seek_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/dropoff_time_seek_bar"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="4dp"
+                android:max="47"
+                android:maxHeight="6dp"
+                android:progressDrawable="@drawable/cars_slider_progress" />
+
+            <TextView
+                android:id="@+id/dropoff_time_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/dropoff_time_seek_bar"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@+id/dropoff_time_seek_bar"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="4dp"
+                android:text="@string/drop_off_time_label"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
+
+            <com.expedia.bookings.widget.CarsTimeSlider
+                android:id="@+id/dropoff_time_seek_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pickup_time_seek_bar"
+                android:layout_marginTop="4dp"
+                android:layout_toRightOf="@+id/dropoff_time_title"
+                android:max="47"
+                android:maxHeight="6dp"
+                android:progressDrawable="@drawable/cars_slider_progress" />
+
+        </RelativeLayout>
 
         <com.expedia.bookings.widget.LinearLayout
+            android:id="@+id/pickup_time_popup_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:id="@+id/pickup_time_popup_text_container"
             android:orientation="vertical"
-            >
+            android:padding="1dp"
+            android:visibility="gone">
 
-            <TextView
-                android:id="@+id/pickup_time_popup"
+            <com.expedia.bookings.widget.LinearLayout
+                android:id="@+id/pickup_time_popup_text_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:singleLine="true"
-                android:layout_gravity="center"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:textSize="14sp" />
+                android:orientation="vertical"
+                android:padding="8dp">
 
-            <TextView
+                <TextView
+                    android:id="@+id/pickup_time_popup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/pop_up_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="pick up time"
+                    android:textColor="@android:color/white"
+                    android:textSize="10sp" />
+            </com.expedia.bookings.widget.LinearLayout>
+
+            <ImageView
+                android:id="@+id/pickup_time_popup_tail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:text="pick up time"
-                android:id="@+id/pop_up_label"
-                android:layout_gravity="center"
-                android:singleLine="true"
-                android:gravity="center"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:textSize="10sp" />
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="13dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/toolbar_arrow"
+                android:tint="@color/cars_tooltip_color" />
+
         </com.expedia.bookings.widget.LinearLayout>
-
-        <ImageView
-            android:id="@+id/pickup_time_popup_tail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/toolbar_arrow"
-            android:layout_marginLeft="13dp"
-            android:layout_marginRight="13dp"
-            android:tint="@color/cars_tooltip_color"
-            android:adjustViewBounds="true" />
-
-    </com.expedia.bookings.widget.LinearLayout>
+    </RelativeLayout>
 
 </com.expedia.bookings.widget.CarSearchParamsWidget>
